--- a/docs/devel/conf.py.in
+++ b/docs/devel/conf.py.in
@@ -39,6 +39,7 @@ extensions = [
     # Must be loaded after napoleon
     'sphinx_autodoc_typehints',
     'class_munger',
+    'sphinx_autodoc_typehints',
 ]
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
